[Releng] Eliminate deprecation warnings new to Java 11.